--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Header - set the background image for the header in the line below-->
         <header class="py-5 bg-image-full" style="background-image: url('https://htmlcolorcodes.com/assets/images/colors/light-pink-color-solid-background-1920x1080.png')">
             <div class="text-center my-5">
-                <img class="img-fluid rounded-circle mb-4" src="../mepic.jpeg" width="150px" alt="..." />
+                <img class="img-fluid rounded-circle mb-4" src="./mepic.jpeg" width="150px" alt="..." />
                 <h1 class="text-white fs-3 fw-bolder">My Resume</h1>
                 <p class="text-white-50 mb-0">About Me</p>
             </div>
