--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <h1><center>My Contact Information</center></h1> <br><br><br>
     <link rel="stylesheet" href="css copy/styles.css">
     <h3><center>Lydia Scibelli <br> Phone: (540)771-0241 <br> Email: scibelligirl2.0@gmail.com</center> </h3>
-    <br><br><br><img src="/Screenshot 2023-04-17 at 2.41.34 PM.png">
+    <br><br><br><img src="./img/Screenshot 2023-04-17 at 2.41.34 PM.png">
     <a target="_blank" href="index.html">Back to Resume</a>
 </body>
 </html>
