--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <h1><center>My Contact Information</center></h1> <br><br><br>
     <link rel="stylesheet" href="css copy/styles.css">
     <h3><center>Lydia Scibelli <br> Phone: (540)771-0241 <br> Email: scibelligirl2.0@gmail.com</center> </h3>
-    <img class="img-fluid rounded-circle mb-4" src="./img/phone.jpeg" width="150px" alt="..." />
+    <img class="img-fluid rounded-circle mb-4" src="./img/phone.jpeg" />
     <!-- <br><br><br><img src="./img/phone.jpeg"/> -->
     <a target="_blank" href="index.html">Back to Resume</a>
 </body>
