--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <h1><center>My Contact Information</center></h1> <br><br><br>
+    <h1><center>My Contact Information</center></h1> <br><br>
     <link rel="stylesheet" href="css copy/styles.css">
     <h3><center>Lydia Scibelli <br> Phone: (540)771-0241 <br> Email: scibelligirl2.0@gmail.com</center> </h3>
     <img class="img-fluid rounded-circle mb-4" src="./img/phone.jpeg" />
